remove usage of `java.util.Collections`