@@ -32,7 +32,6 @@ import hudson.util.ListBoxModel;
 import hudson.util.Secret;
 import hudson.util.VersionNumber;
 import java.io.Serializable;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashSet;
 import java.util.List;
@@ -73,7 +72,7 @@ public class DescriptorImpl extends BuildStepDescriptor<Publisher> implements Se
 
     private static final long serialVersionUID = -2018722914973282748L;
 
-    private transient final ApiClientFactory clientFactory;
+    private final transient ApiClientFactory clientFactory;
 
     /**
      * Specifies the base URL to Dependency-Track v3 or higher.
@@ -195,7 +194,7 @@ public class DescriptorImpl extends BuildStepDescriptor<Publisher> implements Se
         }
         return result
                 .includeEmptyValue()
-                .includeAs(ACL.SYSTEM, item, StringCredentials.class, Collections.emptyList())
+                .includeAs(ACL.SYSTEM, item, StringCredentials.class, List.of())
                 .includeCurrentValue(credentialsId);
     }
 
@@ -397,7 +396,7 @@ public class DescriptorImpl extends BuildStepDescriptor<Publisher> implements Se
     }
 
     private String lookupApiKey(final String credentialId, final Item item) {
-        return CredentialsProvider.lookupCredentials(StringCredentials.class, item, ACL.SYSTEM, Collections.emptyList()).stream()
+        return CredentialsProvider.lookupCredentials(StringCredentials.class, item, ACL.SYSTEM, List.of()).stream()
                 .filter(c -> c.getId().equals(credentialId))
                 .map(StringCredentials::getSecret)
                 .map(Secret::getPlainText)
